--- a/styles.css
+++ b/styles.css
@@ -84,8 +84,10 @@ nav a:hover, nav a.active {
     color: white;
     padding: 1rem;
     width: 100%;
+    max-width: 600px; 
+    margin: 0 auto;  
     border-radius: 10px;
-    
+    box-sizing: border-box;   
 }
 .gallery {
   display: grid;
